# ipc2978api

./: .clang-format-ignore  BufferSize.hpp  BuildSystemTest.cpp  CMakeLists.txt  CompilerTest.cpp  IPCManagerBS.cpp  IPCManagerBS.hpp  IPCManagerCompiler.cpp  IPCManagerCompiler.hpp  Manager.cpp  Manager.hpp  Messages.cpp  Messages.hpp  README.md  Testing.cpp  Testing.hpp  client.cpp  client.hpp  server.cpp  server.hpp
.github/workflows/: cmake-multi-platform.yml
include/: IPCManagerBS.hpp  IPCManagerCompiler.hpp  Manager.hpp  Messages.hpp  README.md
src/: IPCManagerBS.cpp  IPCManagerCompiler.cpp  Manager.cpp
tests/: BuildSystemTest.cpp  ClangTest.cpp  CompilerTest.cpp  Testing.cpp  Testing.hpp  test.cpp
tests/fmt/include/fmt/: color.h  core.h
tests/test1/: A.cpp  B.cpp  main.cpp
